--- a/MapBox/app/build.gradle
+++ b/MapBox/app/build.gradle
@@ -30,7 +30,6 @@ android {
 repositories {
     mavenCentral()
     maven { url 'https://mapbox.bintray.com/mapbox' }
-    maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -41,16 +40,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.23.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places:0.6.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
-    implementation 'ai.api:libai:1.3.5'
-    implementation 'ai.api:sdk:2.0.3@aar'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.jakewharton:butterknife:8.6.0'
-    implementation ('com.mapbox.mapboxsdk:mapbox-android-geocoder:1.0.0@aar'){
-        transitive=true}
-    implementation ('com.mapbox.mapboxsdk:mapbox-android-services:1.0.0@aar'){
-        transitive=true
-    }
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.bignerdranch.android:recyclerview-multiselect:+'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.getbase:floatingactionbutton:1.9.0'
+    implementation 'com.wdullaer:materialdatetimepicker:1.2.1'
 }
