--- a/MapBox/app/src/main/AndroidManifest.xml
+++ b/MapBox/app/src/main/AndroidManifest.xml
@@ -4,19 +4,37 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application android:allowBackup="true"
-        android:icon="@drawable/icon_map"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".Reminder_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".ReminderAddActivity"
+            android:label="@string/title_activity_add_reminder"/>
+
+        <activity android:name=".ReminderEditActivity"
+            android:label="@string/title_activity_edit_reminder"/>
+
+        <activity android:name=".LicencesActivity"
+            android:label="@string/title_activity_licenses"/>
+
+        <receiver android:name=".AlarmReceiver"/>
+
+        <receiver android:name=".BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
+
 
 
 </manifest>
